Fix Safari layout issues on HomeScreenPreview

--- a/app/components/HomeScreenPreview.module.css
+++ b/app/components/HomeScreenPreview.module.css
@@ -8,6 +8,7 @@
 
 .homeScreen {
   height: 90px;
+  width: unset;
   object-fit: cover;
   object-position: left center;
 }
